# leukemia_detection

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/classification/: binary_config.yaml  inference_binary.yaml  onlytrain_binary_config.yaml  train_binary_config.yaml  train_binary_custom_config.yaml  train_ternary_config.yaml  trainval_binary_config.yaml
configs/data/: annotations_extraction.yaml  data_processing.yaml  patch_extraction.yaml  patch_extraction_oversegment.yaml
configs/datasets/: fe.yaml  fe_ihc.yaml
configs/train/: stage1.yaml  stage2.yaml
scripts/: cell_classification.py  cell_inference.py  data_processing.py  segmentation_training.py
scripts/outputs/integrated_training/binary/: original_binary_config.yaml
src/classification/: analysis.py  config.py  datasets.py  evaluation.py  inference.py  memory_efficient.py  models.py  threshold_optimizer.py  trainer.py  transforms.py  utils.py  visualization.py
src/common/: base_config.py  utilities.py
src/data/: README.md  annotation_extractor.py  config.py  geojson_processor.py  mask_converter.py  wsi_processor.py
src/segmentation/datasets/: base_dataset.py  cell_dataset.py  config.py  data_handlers.py  dataset_factory.py  utils.py
src/segmentation/evaluation/: evaluator.py  metrics.py
src/segmentation/inference/: README.md  inference_engine.py  inference_pipeline.py  threshold_optimizer.py
src/segmentation/training/: README.md
src/segmentation/training/config/: base_config.py  stage1_config.py  stage2_config.py
src/segmentation/training/core/: base_trainer.py  multistage_trainer.py  stage1_trainer.py  stage2_trainer.py
src/segmentation/training/losses/: base_losses.py  loss_factory.py  stage1_losses.py  stage2_losses.py
src/segmentation/training/runners/: experiment_runner.py  hyperparameter_search.py
src/segmentation/training/strategies/: full_dataset.py  (+3 more)
src/segmentation/transforms/: __init__.py  augmentations.py  channel_transforms.py  composed_transforms.py  spatial_transforms.py  stain_transforms.py
src/segmentation/utils/: model_utils.py  visualization.py
(+12 files in other folders)
